# robot-arm

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-jetson.txt  requirements.txt  run_gui.bat  run_gui_jetson.sh  setup_jetson.sh  test_connection.py
.claude/: settings.local.json
docs/: VISION_SETUP.md
firmware/arduino_stepper_controller/: arduino_stepper_controller.ino
scripts/: run_gui.py  test_realsense.py
src/armstack.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/armstack/config/: robot_description.yaml  robot_description_jetson.yaml
src/armstack/core/: config.py
src/armstack/drivers/: arduino_stepper.py
src/armstack/kinematics/: planar_2link.py
src/armstack/planning/: __init__.py  jacobian_ik.py  motion_controller.py  trajectory_planner.py
src/armstack/ui/: gui_qt.py
src/armstack/vision/: __init__.py  block_detector.py  realsense_camera.py
